--- a/chess/package.json
+++ b/chess/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@photo-sphere-viewer/core": "^5.13.3",
+    "@photo-sphere-viewer/markers-plugin": "^5.14.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.12.2",
+    "chess.js": "^1.0.0",
     "react": "^19.1.1",
+    "react-chessboard": "^5.6.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
+    "three": "^0.150.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "3.4"
   }
 }
