--- a/chess/package.json
+++ b/chess/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
     "chess.js": "^1.0.0",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-chessboard": "^5.6.1",
     "react-dom": "^19.1.1",
